--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -1,1078 +1,1 @@
-/*
-main
-*/
-.main-body {
-    background: #EBEBEB;
-}
-
-.main-bottom-bar {
-    width: 42px;
-    height: 42px;
-    position: fixed;
-    bottom: 15px;
-    right: 15px;
-    z-index: 100;
-}
-
-.main-top-bar {
-    background-color: white;
-    width: 100%;
-    height: 38px;
-    position: fixed;
-    top: 0px;
-    z-index: 100;
-}
-
-.main-top {
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    text-align: center;
-    font-size: 14px;
-    color: #4EC296;
-    padding-top: 8px;
-}
-
-.main-top-text {
-    padding-bottom: 10px;
-    border-bottom: 2px solid #4EC296;
-}
-
-.main-add {
-    height: 42px;
-    width: 42px;
-    display: block;
-}
-
-.am-list > li {
-    border-width: 0px;
-    background: #EBEBEB;
-}
-
-.am-list-border > li > a, .am-list-static.am-list-border > li {
-    padding: 0;
-}
-
-.main-list {
-    /*margin-top: 49px;*/
-    margin-bottom: 70px;
-}
-
-.main-margin {
-    width: 100%;
-    margin-bottom: -8px;
-}
-
-.main-container {
-    background: white;
-    height: 151px;
-}
-
-.main-g {
-    width: 100%;
-    height: 100%;
-}
-
-.main-left {
-    padding-left: 0;
-    padding-right: 0;
-    display: table-cell;
-    vertical-align: middle;
-    height: 100%;
-    overflow: hidden;
-}
-
-.main-center {
-    margin-left: 13px;
-    width: 100px;
-    height: 100%;
-}
-
-.main-avatar {
-    margin-top: 13px;
-    width: 100px;
-    height: 100px;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    overflow: hidden;
-}
-
-.main-gender {
-    position: absolute;
-    top: 10px;
-    margin-top: 11px;
-    margin-bottom: 0px;
-    margin-right: 0px;
-    color: white;
-    font-size: 11px;
-    text-align: right;
-    width: 100px;
-    height: 19px;
-}
-
-.main-girl {
-    background: #eb6877;
-    height: 19px;
-    width: 16px;
-    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;
-    text-align: center;
-    padding-left: 1px;
-    margin-bottom: 0px;
-}
-
-.main-boy {
-    background: #468ecb;
-    height: 19px;
-    width: 16px;
-    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;
-    text-align: center;
-    margin-bottom: 0px;
-}
-
-.main-info {
-    background: #525E6a;
-    color: white;
-    height: 25px;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-    margin-top: -1px;
-}
-
-.main-name {
-    padding-top: 1px;
-    padding-left: 3px;
-    font-size: 12.5px;
-    text-align: left;
-    margin: 0;
-    width: 70px;
-    height: 100%;
-}
-
-.main-age {
-    padding-top: 1.5px;
-    position: relative;
-    top: -25px;
-    margin: 0;
-    font-size: 11px;
-    text-align: right;
-    width: 97%;
-    height: 100%;
-}
-
-.main-right {
-    padding-top: 11px;
-    padding-left: 0;
-    padding-right: 15px;
-    color: white;
-    font-size: 13px;
-}
-
-.main-yue {
-    height: 20px;
-    width: 100%;
-}
-
-.main-people {
-    background: #97a5b5;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    padding: 1px 5px 2px;
-}
-
-.main-item {
-    font-size:13px;
-    background: #636e79;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    padding: 1px 5px 2px;
-    margin-right: 3px;
-}
-
-.main-start-time {
-    font-size: 13px;
-    background: #97a5b5;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    padding: 1px 5px 2px;
-}
-
-.main-location {
-    color: #333333;
-    height: 53px;
-    font-size: 14px;
-    padding-top: 8px;
-}
-
-.main-time {
-    color: #999999;
-    font-size: 11px;
-}
-
-.main-sports {
-    margin-top: 5px;
-    margin-right: 2%;
-    height: 27px;
-    width: 27px;
-}
-
-.main-text-bottom {
-    background-color: white;
-    border-top: solid 1px #EBEBEB;
-    height: 44px;
-    width: 100%;
-}
-
-.main-content {
-    color: #999999;
-    padding-top: 8px;
-    padding-left: 13px;
-    padding-right: 13px;
-    font-size: 15px;
-    height: 100%;
-    margin-right: 85px;
-}
-
-.main-button {
-    position: absolute;
-    top: 157px;
-    right: 15px;
-    width: 70px;
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.main-green {
-    background-color: #6dcfaa;
-    border-color: #6dcfaa;
-    width: 100%;
-}
-
-.main-danger {
-    background-color: darkgrey;
-    border-color: darkgrey;
-    color: white;
-}
-
-.main-null {
-    position: absolute;
-    top: 130px;
-    width: 100%;
-    color: grey;
-    text-align: center;
-}
-
-/*
-datingRequest
-*/
-.dr-null {
-    position: absolute;
-    top: 200px;
-    width: 100%;
-    text-align: center;
-    color: grey;
-}
-
-.dr-body {
-    background: #EBEBEB;
-}
-
-.dr-container {
-    background: white;
-    height: 120px;
-    width: 94%;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    margin: 10px auto 0;
-}
-
-.dr-avatar {
-    position: absolute;
-    top: 5px;
-    padding-left: 5px;
-    margin: 0 auto;
-    width: 115px;
-    height: 110px;
-}
-
-.dr-info {
-    position: absolute;
-    top: 5px;
-    left: 145px;
-    font-size: 16px;
-    color: grey;
-}
-
-.dr-age {
-    font-size: 14px;
-    color: white;
-    background-color: grey;
-    padding: 1px 3px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-
-}
-
-.dr-city {
-    font-size: 14px;
-    color: white;
-    background-color: grey;
-    padding: 1px 5px;
-    margin-left: 10px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-
-}
-
-.dr-span {
-    color: grey;
-    font-size: 14px;
-    padding-top: 33px;
-}
-
-.dr-conform-button {
-    width: 94%;
-    background-color: white;
-    margin: 0 auto;
-}
-
-.dr-btu-left, .dr-btu-left:focus, .dr-btu-left:hover {
-    width: 100%;
-    border: 1px solid #6dcfaa;
-    background-color: white;
-    color: #6dcfaa;
-}
-
-.dr-btu-right, .dr-btu-right:focus, .dr-btu-right:hover {
-    color: white;
-    width: 100%;
-    border: 1px solid #6dcfaa;
-    background-color: #6dcfaa;
-}
-
-.dr-girl {
-    color: palevioletred;
-    /*position: absolute;*/
-    /*top: 3px;*/
-    /*right: -10px;*/
-    /*font-size: 15px;*/
-}
-
-.dr-boy {
-    color: deepskyblue;
-    /*position: absolute;*/
-    /*top: 3px;*/
-    /*right: -10px;*/
-    /*font-size: 15px;*/
-}
-
-.dr-tab {
-    color: grey;
-    margin-top: 48px;
-    text-align: right;
-    width: 94%;
-    font-size: 14px;
-}
-
-/*
-timeLine
-*/
-.tl-title {
-    width: 100%;
-    height: 240px;
-}
-
-.tl-background-img {
-    width: 100%;
-}
-
-.tl-background {
-    height: 200px;
-    width: 100%;
-    overflow: hidden;
-}
-
-.tl-header {
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-}
-
-.tl-avatar-img {
-    width: 100%;
-    height: 100%;
-}
-
-.tl-avatar {
-    width: 110px;
-    height: 110px;
-}
-
-.tl-masking {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 200px;
-    background: -webkit-gradient(linear, left top, left bottom,
-    from(rgba(255, 255, 255, 0)),
-    color-stop(0.7, rgba(255, 255, 255, 0.1)),
-    color-stop(0.7, rgba(255, 255, 255, 0.1)),
-    to(rgba(87, 98, 108, 0.6)));
-}
-
-.tl-user {
-    position: absolute;
-    top: 36px;
-    left: 38%;
-    color: white;
-    font-size: 16px;
-    width: 62%;
-}
-
-.tl-user p {
-    margin-top: -23px;
-    position: absolute;
-    right: 30%;
-}
-
-.tl-info {
-    position: absolute;
-    top: 130px;
-    left: 8%;
-    width: 92%;
-}
-
-.tl-age {
-    position: relative;
-    top: 15px;
-    font-size: 15px;
-    color: #57626c;
-}
-
-.tl-main {
-    width: 90%;
-    margin: 0 auto;
-    padding: 0 5px 30px 5px;
-}
-
-.tl-location {
-    display: block;
-    width: 75%;
-}
-
-.tl-name {
-    display: block;
-    width: 62%;
-}
-
-.cbp_tmtimeline {
-    margin: 15px 0 0 0;
-    padding: 0;
-    list-style: none;
-    position: relative;
-}
-
-/* The line */
-.cbp_tmtimeline:before {
-    content: '';
-    position: absolute;
-    top: -5px;
-    bottom: -15px;
-    width: 1.2px;
-    background: #a6bac6;
-    left: 20%;
-    margin-left: -5px;
-}
-
-.cbp_tmtimeline > li {
-    position: relative;
-    height: 80px;
-}
-
-/* The date/time */
-.cbp_tmtimeline > li .cbp_tmtime {
-    font-size: 12px;
-    display: block;
-    width: 25%;
-    position: absolute;
-    top: 5px;
-    color: gray;
-}
-
-.cbp_tmtimeline > li .cbp_tmtime span {
-    font-size: 18px;
-}
-
-/* Right content */
-.cbp_tmtimeline > li .cbp_tmlabel {
-    margin: 0 0 5% 30%;
-    padding: 5px;
-    font-size: 16px;
-    color: grey;
-    position: absolute;
-    top: 18px;
-    width: 68%;
-}
-
-/* The icons */
-.cbp_tmtimeline > li .cbp_tmicon img {
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    position: relative;
-    top: 18px;
-    left: -13px;
-}
-
-.cbp_tmtimeline > li .cbp_tmicon {
-    width: 5px;
-    height: 5px;
-    background: #8d9fab;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    position: absolute;
-    left: 20%;
-    top: 14px;
-    margin: 0 0 0 -7px;
-}
-
-.tl-item {
-    padding-right: 3px;
-    padding-left: 3px;
-    width: 20px;
-    font-size: 14px;
-    color: white;
-    background: #4EC296;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-}
-
-.tl-start-time {
-    margin-left: 5%;
-    width: auto;
-    font-size: 14px;
-    padding-left: 2%;
-    padding-right: 3%;
-    color: white;
-    background: #4EC296;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-}
-
-.tl-icon-people {
-    margin-bottom: 3px;
-    margin-right: 5px;
-    margin-left: 20px;
-    height: 12px;
-    width: 15px;
-}
-
-.tl-people {
-    position: absolute;
-    top: 6px;
-    right: 0;
-    font-size: 14px;
-}
-
-.tl-gray {
-    background-color: #DDDDDD;
-}
-
-.tl-green {
-    color: #4EC296;
-}
-
-.tl-null {
-    color: grey;
-    padding-top: 20px;
-    text-align: center;
-}
-
-hr {
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-}
-
-/*
-indivadualInfo
-*/
-.ii-body {
-    background-color: #EBEBEB;
-}
-
-.ii-container {
-    margin: 50px 11px 10px;
-    font-size: 16px;
-}
-
-.ii-info {
-    background-color: white;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-.ii-avatar {
-    width: 100%;
-    height: 100px;
-    padding-top: 36px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ii-avatar > img {
-    width: 80px;
-    height: 80px;
-    position: absolute;
-    right: 35px;
-    top: 9px;
-}
-
-.ii-nickName {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ii-nickName > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-    font-size: 15px;
-}
-
-.ii-tel {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ii-tel > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-    font-size: 15px;
-}
-
-.ii-weChat {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ii-weChat > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-    font-size: 15px;
-}
-
-.ii-timeLine {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-}
-
-.ii-timeLine > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-}
-
-.ii-gender {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ii-gender > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-    font-size: 15px;
-}
-
-.ii-age {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ii-age > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-    font-size: 15px;
-}
-
-.ii-height {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ii-height > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-}
-
-.ii-weight {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ii-weight > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-}
-
-.ii-arrows {
-    position: relative;
-    top: -30px;
-    right: 5px;
-    color: #66727d;
-    font-weight: normal;
-    display: block;
-    text-align: right;
-    padding-right: 5px;
-    padding-top: 5px;
-    height: 41px;
-    font-size: 18px;
-}
-
-.ii-sports {
-    width: 100%;
-    height: 42px;
-    padding-top: 8px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ii-icon {
-    position: absolute;
-    right: 11px;
-    background-color: white;
-    bottom: 47px;
-}
-
-.ii-sports-icon {
-    width: 25px;
-    height: 25px;
-}
-
-.ii-clause {
-    width: 100%;
-    height: 42px;
-    padding-top: 8px;
-    padding-left: 10px;
-}
-
-/*
-addDating
-*/
-.ad-body {
-    background-color: #EBEBEB;
-}
-
-.ad-container {
-    margin: 50px 11px 10px;
-    font-size: 16px;
-}
-
-.ad-info {
-    background-color: white;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-.ad-title {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ad-title > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-}
-
-.ad-location {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ad-location > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-}
-
-.ad-start {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ad-start > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-}
-
-.ad-end {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-}
-
-.ad-end > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-}
-
-.ad-badge {
-    font-size: 15px;
-}
-
-.ad-partner {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ad-partner > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-}
-
-.ad-age {
-    width: 100%;
-    height: 42px;
-    padding-top: 9px;
-    padding-left: 10px;
-    border-bottom: 1px solid #EBEBEB;
-}
-
-.ad-age > span {
-    background-color: white;
-    color: #66727d;
-    font-weight: normal;
-    position: absolute;
-    right: 32px;
-    padding-top: 6px;
-}
-
-.ad-arrows {
-    position: relative;
-    top: -31px;
-    right: 5px;
-    color: #66727d;
-    font-weight: normal;
-    display: block;
-    text-align: right;
-    padding-right: 5px;
-    padding-top: 5px;
-    /*font-size: 13px;*/
-    height: 41px;
-    font-size: 18px;
-}
-
-.ad-sports {
-    width: 25px;
-    height: 25px;
-}
-
-.ad-content {
-    height: 60px;
-    width: 100%;
-    border: solid 0px grey;
-    border-radius: 3px;
-    resize: none;
-}
-
-.ad-content:focus {
-    outline: none;
-}
-
-.ad-sub {
-    margin: 0 auto;
-    width: 250px;
-}
-
-.ad-button {
-    width: 100%;
-    height: 50px;
-}
-
-.ad-btn {
-    width: 100%;
-}
-
-.am-modal-dialog {
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-}
-
-.ad-limit {
-    position: absolute;
-    right: 10px;
-    top: 38px;
-    font-size: 12px;
-    color: grey;
-}
-
-.am-list-border > li > a:focus, .am-list-border > li > a:hover .am-u-sm-4 > a:focus, .am-u-sm-4 > a:hover {
-    background-color: transparent;
-!important;
-}
-
-.am-list-border > li > a:focus, .am-list-border > li > a:hover {
-    background-color: transparent;
-}
-
-.am-avg-sm-4 > li > div {
-    margin: 0 auto;
-    width: 50px;
-    height: 50px;
-    color: grey;
-    text-align: center;
-    font-size: 14px;
-    background-color: white;
-}
-
-.am-avg-sm-4 > li > div > img {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 5px;
-}
-
-.am-avg-sm-4 > li > div > span {
-    font-size: 13px;
-}
-
-.ss-cover {
-    /*background-color: rgba(255, 255, 255, 0.5);*/
-    width: 50px;
-    height: 50px;
-    position: relative;
-    top: -77px;
-}
-
-.am-btn.am-radius {
-    border-radius: 5px;
-}
-
-@media only screen and (max-width: 359px) {
-    .main-left {
-        width: 35%;
-    }
-
-    .main-center {
-        margin-left: 6px;
-        width: 100px;
-        height: 100%;
-    }
-
-    .main-right {
-        padding-top: 11px;
-        padding-left: 0;
-        padding-right: 15px;
-        width: 65%;
-        color: white;
-        font-size: 13px;
-    }
-
-    .dr-info {
-        position: absolute;
-        top: 5px;
-        left: 130px;
-        font-size: 16px;
-        color: grey;
-    }
-}
+/* Write your styles */
